added readme, removed test files

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -46,5 +46,5 @@
 
 
 <div class="footer">
-  <a><span class="glyphicon glyphicon-info-sign"></span> View this project on GitHub</a>
+  <a href="https://github.com/tomraithel/angular-password-quality" taget="_blank"><span class="glyphicon glyphicon-info-sign"></span> View this project on GitHub</a>
 </div>
